multi Locks Stream Lazy, Eager