@@ -2,39 +2,38 @@ package com.homework.threads.airport;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Queue;
-import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.PriorityBlockingQueue;
 
 class Gate {
+    private static Gate gate;
+    private static final List<Plane> planes = new ArrayList<>();
+    private static final Queue<Family> arrivedPassengers = new PriorityBlockingQueue<>(5, new FamilyComparator());
 
-	private BusStation station;
-	private Queue<Family> passengersList;
-	private List<Family> arrivedPassengers;
-	private static Gate gate;
+    private Gate() {
+    }
 
-	public static Gate getGate() {
-		return gate == null ? gate = new Gate() : gate;
-	}
+    public static Gate getGate() {
+        return Objects.requireNonNullElseGet(gate, () -> gate = new Gate());
+    }
 
-	private Gate() {
-		this.station = BusStation.getStation();
-		this.arrivedPassengers = new ArrayList<>();
-		this.passengersList = new ConcurrentLinkedQueue<>();
-	}
+    public void arrive(Plane plane) {
+        planes.add(plane);
+        arrivedPassengers.addAll(plane.getFamilies());
+        System.out.println(plane);
+    }
 
-	void arrive(Plane plane) {
-		View.display(String.format("%s arrived to the gate#%s%n", plane, Thread.currentThread().getId()));
-		arrivedPassengers.addAll(plane.families);
-		security(plane.families);
-		plane.families.clear();
-	}
+    public Queue<Family> getArrivedPassengers() {
+        return arrivedPassengers;
+    }
 
-	synchronized private void security(List<Family> passengers) {
-		passengersList.addAll(passengers);
-		if (passengersList.size() == arrivedPassengers.size()) {
-			View.display(String.format("Security control, prepare your documents%n"));
-			station.boarding(arrivedPassengers);
-			passengersList.clear();
-		}
-	}
+    public List<Plane> getArrivedPlane() {
+        return planes;
+    }
+
+    @Override
+    public String toString() {
+        return "\u001B[32m%s passengers arrived at the Gates%n\u001B[m%s".formatted(arrivedPassengers.stream().mapToInt(Family::getCount).sum(), planes);
+    }
 }
